--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-	<link rel="icon" type="image/jpg" href="http://zshawnsyed.com/favicon.png?v=1">
+	<link rel="icon" type="image/jpg" href="http://zshawnsyed.com/favicon.jpg?v=1">
 
 	<link rel="stylesheet" href=" {{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/site.css" | prepend: site.baseurl }}">
