Working pagination links
* Added pagination to blog link including pagination links
* Fixed up home page to include read all link to blog

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -188,3 +188,10 @@ html, body {
   margin-bottom: -150px;
   padding-bottom: 200px;
 }
+
+.toc-top-list {
+    list-style-type: upper-alpha;
+}
+.toc-sublist {
+    list-style-type: lower-alpha;
+}
