--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 
-  <div class="footer-wrapper">
+  <div class="footer-wrapper container">
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
